--- a/pro2/pro2.html
+++ b/pro2/pro2.html
@@ -192,7 +192,7 @@
       <div class="section9">Avocado toast</div>
       <div class="section10">Ginger soda</div>
     </div>
-               
+          <div class="container014">   
            
             <div class="container14">
         <div class="section11">NEVER MISS A RECIPE.</div>
@@ -202,6 +202,6 @@
         </div>
         <div class="container16">
         <div class="sign">Sign Up</div>
-        </div>
+        </div></div>  
 </body>
 </html>
