--- a/pro2/pro2.html
+++ b/pro2/pro2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project2</title>
     <link rel="stylesheet" href="pro2.css">
     <link rel="stylesheet" href="text1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,7 +24,7 @@
         
     </div>
             <div class="header">
-            <div class="wellness by Mihra">WELENESS BY MIHRA</div>
+            <div class="wellness by Mihra">WELLNESS BY MIHRA</div>
             </div>
             
             <div class="Box">
